--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
   <html>
     <link rel="stylesheet" type="text/css" href="style.css">
     <head>
-      <title>[Your Name]'s Github Pages Site</title>
+      <title>Cailin's Github Pages Site</title>
     </head>
     <body>
-      <h1>[Your Name]'s Github Pages Site</h1>
+      <h1>Cailin's Github Pages Site</h1>
       <nav><ul class="main-menu">
   <li><a href="/portfolio/">Final Portfolio</a></li>
   <li>Link 2</li>
