--- a/work-1/index.html
+++ b/work-1/index.html
@@ -7,19 +7,17 @@
 <body>
   <h1>Matt Lavin's Github Pages Site</h1>
   <nav><ul class="main-menu">
-    <li><a href="../../">Home</a></li>
-    <li><a href="../../work-1/">Work-in-Progress 1</a></li>
-    <li><a href="../../work-2/">Work-in-Progress 2</a></li>
-    <li><a href="../../presentation/">Work-in-Progress Presentation</a></li>
-    <li><a href="../../portfolio/">Final Portfolio</a></li>
+    <li><a href="../">Home</a></li>
+    <li>Work-in-Progress 1</li>
+    <li><a href="../work-2/">Work-in-Progress 2</a></li>
+    <li><a href="../presentation/">Work-in-Progress Presentation</a></li>
+    <li><a href="../portfolio/">Final Portfolio</a></li>
     </ul>
-    
-    <ul class="main-menu">
-    <li>Classwork Sample 1</li>
-    <li><a href="../../work-1/sample-2/">Classwork Sample 2</a></li>
+     <ul class="main-menu">
+    <li><a href="../work-1/sample-1/">Classwork Sample 1</a></li>
+    <li><a href="../work-1/sample-2/">Classwork Sample 2</a></li>
     </ul>
-    
-    </nav>
+  </nav>
   <main>
     <h2>Work in Progress 1</h2>
     <p>Work in Progress 1 begins here</p>
