--- a/work-1/index.html
+++ b/work-1/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Matt Lavin's Github Pages Site</title>
+  <title>Cailin Brashear's Github Pages Site</title>
   <link rel="stylesheet" type="text/css" href="/style.css">
   </head>
 <body>
-  <h1>Matt Lavin's Github Pages Site</h1>
+  <h1>Cailin Brashear's Github Pages Site</h1>
   <nav><ul class="main-menu">
     <li><a href="../">Home</a></li>
     <li>Work-in-Progress 1</li>
@@ -13,9 +13,9 @@
     <li><a href="../presentation/">Work-in-Progress Presentation</a></li>
     <li><a href="../portfolio/">Final Portfolio</a></li>
     </ul>
-     <ul class="main-menu">
-    <li><a href="../work-1/sample-1/">Classwork Sample 1</a></li>
-    <li><a href="../work-1/sample-2/">Classwork Sample 2</a></li>
+     <ul class="sub-menu">
+    <li><a href="sample-1/">Classwork Sample 1</a></li>
+    <li><a href="sample-2/">Classwork Sample 2</a></li>
     </ul>
   </nav>
   <main>
