--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,11 +7,11 @@
     <body>
       <h1>Cailin's Github Pages Site</h1>
       <nav><ul class="main-menu">
-  <li>Link 1</li>
-  <li>Link 2</li>
-  <li>Link 3</li>
-  <li>Link 4</li>
-  <li>Link 5</li>
+  <li><a href="../">Home</a></li>
+  <li><a href="../work-1/">Work-in-Progress 1</a></li>
+  <li><a href="../work-2/">Work-in-Progress 2</a></li>
+  <li><a href="../presentation/">Work-in-Progress Presentation</a></li>
+  <li>Final Portfolio</li>
 </ul></nav>
       <main>
         <h2>About Me</h2>
