--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,7 +14,7 @@
   <li>Final Portfolio</li>
 </ul></nav>
       <main>
-        <h2>About Me</h2>
+        <h2>My Portfolio</h2>
         <p>[About me text here]</p>
       </main>
       <footer>
