--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <title>Cailin's Github Pages Site</title>
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="static/style.css">
     </head>
     <body>
       <h1>Cailin's Github Pages Site</h1>
