--- a/presentation/index.html
+++ b/presentation/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Matt Lavin's Github Pages Site</title>
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <title>Cailin Brashear's Github Pages Site</title>
+  <link rel="stylesheet" type="text/css" href="/static/style.css">
   </head>
 <body>
   <h1>Matt Lavin's Github Pages Site</h1>
