--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,8 +1,8 @@
   <!DOCTYPE html>
   <html>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/static/style.css">
     <head>
-      <title>Cailin's Github Pages Site</title>
+      <title>Cailin Brashear's Github Pages Site</title>
     </head>
     <body>
       <h1>Cailin's Github Pages Site</h1>
