--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title>Cailin's Github Pages Site</title>
       <link rel="stylesheet" type="text/css" href="static/style.css">
     </head>
+    <h1>font-family: 'Special Elite', cursive;</h1> 
     <body>
       <h1>Cailin's Github Pages Site</h1>
       <nav><ul class="main-menu">
