--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Cailin's Github Pages Site</title>
       <link rel="stylesheet" type="text/css" href="/static/style.css">
     </head>
-
+<link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
     <body>
       <h1>Cailin's Github Pages Site</h1>
       <nav><ul class="main-menu">
