--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,7 +2,7 @@
   <html>
     <link rel="stylesheet" type="text/css" href="/static/style.css">
     <head>
-      <title>Cailin Brashear's Github Pages Site</title>
+      <title>Cailin's Github Pages Site</title>
     </head>
     <body>
       <h1>Cailin's Github Pages Site</h1>
