--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
       <title>Cailin's Github Pages Site</title>
+      <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="/static/style.css">
     </head>
 
