--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" type="text/css" href="/static/style.css">
     <head>
       <title>Cailin's Github Pages Site</title>
+      <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
     </head>
     <body>
       <h1>Cailin's Github Pages Site</h1>
