--- a/work-1/sample-1/index.html
+++ b/work-1/sample-1/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Cailin Brashear's Github Pages Site</title>
   <link rel="stylesheet" type="text/css" href="/static/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
   </head>
 <body>
   <h1>Cailin Brashear's Github Pages Site</h1>
