--- a/presentation/index.html
+++ b/presentation/index.html
@@ -13,6 +13,7 @@
     <li><a href="../work-2/">Work-in-Progress 2</a></li>
     <li>Work-in-Progress Presentation</li>
     <li><a href="../portfolio/">Final Portfolio</a></li>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul></nav>
   <main>
     <h2>My Work in Progress Presentation</h2>
