--- a/work-1/index.html
+++ b/work-1/index.html
@@ -13,6 +13,7 @@
     <li><a href="../work-2/">Work-in-Progress 2</a></li>
     <li><a href="../presentation/">Work-in-Progress Presentation</a></li>
     <li><a href="../portfolio/">Final Portfolio</a></li>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul>
      <ul class="sub-menu">
     </ul>
