--- a/work-2/index.html
+++ b/work-2/index.html
@@ -13,6 +13,7 @@
     <li>Work-in-Progress 2</li>
     <li><a href="../presentation/">Work-in-Progress Presentation</a></li>
     <li><a href="../portfolio/">Final Portfolio</a></li>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul></nav>
   <main>
     <h2>Work in Progress 2</h2>
