--- a/work-1/sample-2/index.html
+++ b/work-1/sample-2/index.html
@@ -13,17 +13,18 @@
     <li><a href="../../work-2/">Work-in-Progress 2</a></li>
     <li><a href="../../presentation/">Work-in-Progress Presentation</a></li>
     <li><a href="../../portfolio/">Final Portfolio</a></li>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul>
     
     <ul class="main-menu">
     <li><a href="../../work-1/sample-1/">Classwork Sample 1</a></li>
-    <li>For my website, I plan to engage my audience in many aspects of my life –both professionally and creatively. My audience, in hopes, will include friends and peers as well as future colleges or people I hope to engage with on a professional level. The purpose will be to showcase what I believe to be the most important things in my life in a blog of sorts. I would like to display an easy-to-navigate site with categories across the top consisting of travel, studies, the arts, sustainabilitypractices, life philosophies, friendsetc. One website that I frequently visit is called Filmatique –a site that I personally work for –and I would like to incorporate their simplistic style, easy navigation, and memorable title pages and headings into my site. Visually speaking, I would like to showcase an artistic, yet semi-simplistic theme as to not clutter my website. I would like to use colors and fonts that I feel exemplify my own personality and life experiences –earthy, yet bold; classic with a grungy twist. I want to use a classic, cursive font for headings and an easily legible, classic font for text such as Garamond. Colors should include blacks and greys, reds, and a good deal of white space while also incorporating earthy accent tones of yellows, greens and purples where I see fit. Ideally, each category should have a different feel to it that mirrors the topics within but still follow an overarching theme. My life itself and the categories I will showcase are very different, so I would like to prescribe a different feel for each one to better relate to my audience as a whole and to develop what I believe to be an interesting and aesthetically pleasing portrayal of myself. </li>
+    <li> </li>
     </ul>
     
     </nav>
   <main>
     <h2>Work in Progress 1</h2>
-    <p>Work in Progress 1 begins here</p>
+    <p>For my website, I plan to engage my audience in many aspects of my life –both professionally and creatively. My audience, in hopes, will include friends and peers as well as future colleges or people I hope to engage with on a professional level. The purpose will be to showcase what I believe to be the most important things in my life in a blog of sorts. I would like to display an easy-to-navigate site with categories across the top consisting of travel, studies, the arts, sustainabilitypractices, life philosophies, friendsetc. One website that I frequently visit is called Filmatique –a site that I personally work for –and I would like to incorporate their simplistic style, easy navigation, and memorable title pages and headings into my site. Visually speaking, I would like to showcase an artistic, yet semi-simplistic theme as to not clutter my website. I would like to use colors and fonts that I feel exemplify my own personality and life experiences –earthy, yet bold; classic with a grungy twist. I want to use a classic, cursive font for headings and an easily legible, classic font for text such as Garamond. Colors should include blacks and greys, reds, and a good deal of white space while also incorporating earthy accent tones of yellows, greens and purples where I see fit. Ideally, each category should have a different feel to it that mirrors the topics within but still follow an overarching theme. My life itself and the categories I will showcase are very different, so I would like to prescribe a different feel for each one to better relate to my audience as a whole and to develop what I believe to be an interesting and aesthetically pleasing portrayal of myself.</p>
   </main>
   <footer>My Footer</footer>
 </body>
