--- a/work-1/sample-2/index.html
+++ b/work-1/sample-2/index.html
@@ -18,6 +18,7 @@
     
     <ul class="main-menu">
     <li><a href="../../work-1/sample-1/">Classwork Sample 1</a></li>
+      <li>Classwork Sample 2</li>
     </ul>
     
     </nav>
