--- a/work-1/index.html
+++ b/work-1/index.html
@@ -22,6 +22,7 @@
     <h2>Work in Progress 1</h2>
     <li><a href="sample-1/">Classwork Sample 1</a></li>
     <li><a href="sample-2/">Classwork Sample 2</a></li>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <p>Work in Progress 1 begins here</p>
   </main>
   <footer>My Footer</footer>
