--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <li><a href="presentation/">Work-in-Progress Presentation</a></li>
     <li><a href="portfolio/">Final Portfolio</a></li>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <Style> {
+      background-color: Beige;
+      }
+        </Style> 
 </ul></nav>
       <main>
         <h2>About Me</h2>
