--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
     <li><a href="work-2/">Work-in-Progress 2</a></li>
     <li><a href="presentation/">Work-in-Progress Presentation</a></li>
     <li><a href="portfolio/">Final Portfolio</a></li>
-    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
-    <Style> {
-      background-color: Beige;
-      }
-        </Style> 
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
 </ul></nav>
       <main>
         <h2>About Me</h2>
