--- a/work-1/sample-1/index.html
+++ b/work-1/sample-1/index.html
@@ -24,7 +24,30 @@
     </nav>
   <main>
     <h2>Work in Progress 1</h2>
-    <p>Work in Progress 1 begins here</p>
+    <p>Original:
+Yelp Review: Pittsburgh Zoo
+by Cailin Brashear 
+Let me begin first with saying that this establishment was an abomination. I recently took my 
+kids here for a weekend getaway in hopes of seeing some real wildlife as we are native 
+Pittsburghers and recently realized that we have never traveled to the zoo 
+ourselves. This place 
+was filthy! There was fecil matter in the cages! With the animals! Animals producing fecil
+matter?? In front of unknowing onlookers such as my children and me 
+–
+how dare they?! On 
+top of it all, I could not even find one single animal
+for purchase. My daughter cried and cried 
+because all she came there for was to get a penguin for Christmas. Is that too much to ask? I 
+had $20 hot and ready to spend in my pocket and yet I left with nothing but a lousy stuffed 
+animal of a 
+unicorn. I didn
+’t even see any unicorns there! What kind of zoo doesn’t have 
+unicorns? Also, I felt extremely unsafe and on edge the entire duration of the trip. No animals 
+were in muzzles or on leashes?? What’s up with that? You think that a 6 inch glass wall is 
+enough 
+to hold an 87 pound fox away from my children? Guess again. We will not be returning 
+to this establishment in the near future, and I beg that anyone considering this place as a fun 
+vacation for family please reconsider.</p>
   </main>
   <footer>My Footer</footer>
 </body>
