--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
 </ul></nav>
       <main>
-        <h2>About Me</h2>
+        <h2>Cheers!</h2>
         <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
+        <h3> Original:</h3> 
         <p>Hi! My name is Cailin Brashear, and I’m a student at the University of Pittsburgh studying public professional writing and communications with a minor in international relations. I currently hold an internship as a public relations representative at an international film streaming website called Filmatique – which allows me to bring my interests in art, cinema, social issues, and world travel to life! For the short duration of my adult life thusfar, I have spent a great deal of time traveling the world and pursuing my deep interests in fields such as literature, art, food, music and writing. In my free time, when I’m not studying, working as a sever at a local restaurant, or engaged in a multitude of tasks for my internship and clubs I am involved with, I like to cook, surround myself with family and friends, read, write, go hiking and engage in meaningful conversations about life and society!</p>
+        <h3>Revised:</h3>
       </main>
       <footer>
         My Footer
