--- a/work-1/sample-1/index.html
+++ b/work-1/sample-1/index.html
@@ -24,9 +24,9 @@
     </nav>
   <main>
     <h2>Work in Progress 1</h2>
-    <p>Original:
-Yelp Review: Pittsburgh Zoo
-by Cailin Brashear 
+    <h/3> Original:</h3> 
+    <h4> Yelp Review: Pittsburgh Zoo</h4> 
+    <p>
 Let me begin first with saying that this establishment was an abomination. I recently took my 
 kids here for a weekend getaway in hopes of seeing some real wildlife as we are native 
 Pittsburghers and recently realized that we have never traveled to the zoo 
@@ -48,7 +48,12 @@ enough
 to hold an 87 pound fox away from my children? Guess again. We will not be returning 
 to this establishment in the near future, and I beg that anyone considering this place as a fun 
 vacation for family please reconsider.</p>
+    <h3> Revised: </h3>
+    <h4> Airbnb Review</h4> 
+    <P>
+My husband and I recently booked a trip to Barcelona and decided to save some money by booking and Airbnb in the heart of the city instead of a pricey hotel. This was our first time using Airbnb and hardly researched how it works, but it should have been self-explanatory right?! We landed in Barcelona, rented a car from the airport, and drove to our destination. Upon our arrival, our Airbnb ‘host’ was nowhere to be found! Check in said 4 o’clock – what were we supposed to do? Contact her any time besides when we booked our trip 5 months before to let her know we were coming? How tedious and inconvenient for us that would have been! But that’s not even the worst part! When we were finally let in after waiting an entire 15 minutes for our ‘host’ to get back to let us in, we found out that she was still living in the house. With us. Allow me to repeat. She. Did. Not. Leave. It’s like she planned on staying in her own room while she rented out her spare bedroom to guests to make some extra money. What on earth?! Does Airbnb know that some of these ‘hosts’ are doing this? Its not like its implied in the name or anything. AWKWARD. She was just cooking in her own kitchen and watching tv in her own living room! The. Entire. Time. If I could give zero stars I would. Never booking an Airbnb again. Trip = ruined!
+      </p>
   </main>
-  <footer>My Footer</footer>
+  <footer></footer>
 </body>
 </html>
