--- a/work-1/sample-1/index.html
+++ b/work-1/sample-1/index.html
@@ -24,7 +24,7 @@
     </nav>
   <main>
     <h2>Work in Progress 1</h2>
-    <h/3> Original:</h3> 
+    <h3> Original:</h3> 
     <h4> Yelp Review: Pittsburgh Zoo</h4> 
     <p>
 Let me begin first with saying that this establishment was an abomination. I recently took my 
