--- a/work-1/index.html
+++ b/work-1/index.html
@@ -25,6 +25,6 @@
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     <p>Work in Progress 1 begins here</p>
   </main>
-  <footer>My Footer</footer>
+  <footer></footer>
 </body>
 </html>
