--- a/work-2/index.html
+++ b/work-2/index.html
@@ -17,8 +17,8 @@
     </ul></nav>
   <main>
     <h2>Work in Progress 2</h2>
-    <p>Work in Progress 2 begins here</p>
+    <p></p>
   </main>
-  <footer>My Footer</footer>
+  <footer></footer>
 </body>
 </html>
