--- a/presentation/index.html
+++ b/presentation/index.html
@@ -17,8 +17,8 @@
     </ul></nav>
   <main>
     <h2>My Work in Progress Presentation</h2>
-    <p>My Work in Progress Presentation begins here</p>
+    <p></p>
   </main>
-  <footer>My Footer</footer>
+  <footer></footer>
 </body>
 </html>
