--- a/work-2/index.html
+++ b/work-2/index.html
@@ -12,6 +12,7 @@
     <li><a href="../work-1/">Work-in-Progress 1</a></li>
     <li>Work-in-Progress 2</li>
     <li><a href="../presentation/">Work-in-Progress Presentation</a></li>
+    <li><a href="work-2/">Progress checklist</a></li> 
     <li><a href="../portfolio/">Final Portfolio</a></li>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul></nav>
