--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -12,7 +12,7 @@
     <li><a href= "../work-1/">Work-in-Progess 1</a></li>
     <li><a href="../work-2/">Work-in-Progress 2</a></li>
     <li><a href="../presentation/">Work-in-Progress Presentation</a></li>
-	  <li>Progress Checklist</li> 
+    <li>Progress checklist</li> 
     <li><a href="../portfolio/">Final Portfolio</a></li>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul>
