--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -21,7 +21,8 @@
   </nav>
   <main>
     <h2>Progress Checklist</h2>
-	  <p> | Assignment | Status | Date Started | Date Completed | Notes |
+	  
+| Assignment | Status | Date Started | Date Completed | Notes |
 |---|---|---|---|---|
 | Complete Work-in-Progress Submission 2 | done | 3/17/2020 | 3/18/2020 | Committed changes on Github and placed link Box folder|
 | Complete Audacity tutorial 1: Editing an Existing Audio File | | | |
@@ -34,5 +35,5 @@
 | Put your Pecha Kucha slides on your Github pages website | | | |
 | Complete soundscape activity, parts 1 and 2  | | | |
 | Complete peer review assignment | | | |
-		  | Complete final website, including portfolio submission  | | | | </p>
+| Complete final website, including portfolio submission  | | | |
 
