--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -20,7 +20,7 @@
 	  </ul>
   </nav>
   <main>
-    <h2>Progress Checklist</h2>
+#Progress Checklist
 	  
 | Assignment | Status | Date Started | Date Completed | Notes |
 |---|---|---|---|---|
