--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -22,4 +22,4 @@
   <main>
 	  <h2>Progress Checklist</h2>
 	 
-<link href="/progress checklist/checklist.md">
+<link href="/progress checklist/checklist.html">
