--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -18,6 +18,7 @@
     </ul>
      <ul class="sub-menu">
 	  </ul>
+	  <link href="/progress checklist/checklist.md">
   </nav>
   <main>
 	  <h2>Progress Checklist</h2>
