--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -18,12 +18,11 @@
     </ul>
      <ul class="sub-menu">
 	  </ul>
-	  <link href="/progress checklist/checklist.md">
+	  <link type="markdown/md" href="/progress checklist/checklist.md">
   </nav>
   <main>
 	  <h2>Progress Checklist</h2>
 	 
-<link href="/progress checklist/checklist.html">
 
 	   Assignment | Status | Date Started | Date Completed | Notes |
 |---|---|---|---|---|
