--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -18,23 +18,100 @@
     </ul>
      <ul class="sub-menu">
 	  </ul>
-	  <link type="markdown/md" href="/progress checklist/checklist.md">
   </nav>
-  <main>
-	  <h2>Progress Checklist</h2>
-	 
-
-	   Assignment | Status | Date Started | Date Completed | Notes |
-|---|---|---|---|---|
-| Complete Work-in-Progress Submission 2 | | | |
-| Complete Audacity tutorial 1: Editing an Existing Audio File | | | |
-| Complete Audacity tutorial 2: Mixing a Narration with Background Music  | | | |
-| Complete Audacity tutorial 3: Vocal Removal and Isolation (requires audacity) | | | |
-| Complete Audacity tutorial 4: Looping (requires audacity) | | | |
-| Read Horton and Quesenbery, "A web for everyone" | | | |
-| Complete Quiz 5 | | | |
-| Turn in Pecha Kucha screencast/narration | | | |
-| Put your Pecha Kucha slides on your Github pages website | | | |
-| Complete soundscape activity, parts 1 and 2  | | | |
-| Complete peer review assignment | | | |
-| Complete final website, including portfolio submission  | | | |
+<main>
+    <div><h2>Progress Checklist</h2></div>
+    <br>
+    <table style="width:80%">
+      <tr>
+        <th>Assignment</th>
+        <th>Status</th> 
+        <th>Started</th>
+        <th>Completed</th> 
+        <th>Notes</th>
+      </tr>
+      <tr>
+        <td>Work-In-Progress 2</td>
+        <td>Done</td>
+        <td>03-04-20</td>
+        <td>03-27-20</td>
+        <td>Changes committed and website updated.</td>
+      </tr>
+      <tr>
+        <td>Audacity Tutorial 1</td>
+        <td>Done</td>
+        <td>03-30-20</td>
+        <td>03-30-20</td>
+        <td>Tutorial_1.wav saved to Box</td>
+      </tr>
+      <tr>
+        <td>Audacity Tutorial 2</td>
+        <td>Done</td>
+        <td>03-30-20</td>
+        <td>03-30-20</td>
+        <td>Do not have access to a microphone, but read and understand the material for now.</td>
+      </tr>
+      <tr>
+        <td>Audacity Tutorial 3</td>
+        <td>In Progress</td>
+        <td>04-01-20</td>
+        <td></td>
+        <td>Read, but have not uploaded to Box yet</td>
+      </tr>
+      <tr>
+        <td>Audacity Tutorial 4</td>
+        <td>In Progress</td>
+        <td>04-01-20</td>
+        <td></td>
+        <td>Read, but have not uploaded to Box yet</td>
+      </tr>
+      <tr>
+        <td>"A Web for Everyone"</td>
+        <td>Unstarted</td>
+        <td></td>
+        <td></td>
+        <td>Suggested: April 6</td>
+      </tr>
+      <tr>
+        <td>Quiz 5</td>
+        <td>Unstarted</td>
+        <td></td>
+        <td></td>
+        <td>Suggested: April 6</td>
+      </tr>
+      <tr>
+        <td>Pecha Kucha</td>
+        <td>Done</td>
+        <td>02-03-20</td>
+        <td>02-23-20</td>
+        <td>Link in Boxnote, presented in class.</td>
+      </tr>
+      <tr>
+        <td>Pecha Kucha on Github Site</td>
+        <td>Done</td>
+        <td>02-24-20</td>
+        <td>03-23-20</td>
+        <td>Slides embedded, explanation considered part of WiP2 asssignment.</td>
+      </tr>
+      <tr>
+        <td>Soundscape Parts 1 and 2</td>
+        <td>Unstarted</td>
+        <td></td>
+        <td></td>
+        <td>Suggested: April 15</td>
+      </tr>
+      <tr>
+        <td>Peer Review</td>
+        <td>Unstarted</td>
+        <td></td>
+        <td></td>
+        <td>Due: April 20</td>
+      </tr>
+      <tr>
+        <td>Final Website and Portfolio Submission</td>
+        <td>Unstarted</td>
+        <td></td>
+        <td></td>
+        <td>Due: April 30</td>
+      </tr>
+    </table>	 
