--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cailin's Github Pages Site</title>
-  <link rel="stylesheet" type="text/css" href="/static/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
+  <title>Cailin's Github Pages Site</titl
   </head>
 <body>
   <h1>Cailin's Github Pages Site</h1>
@@ -32,84 +30,84 @@
       </tr>
       <tr>
         <td>Work-In-Progress 2</td>
-        <td>Done</td>
-        <td>03-04-20</td>
-        <td>03-27-20</td>
-        <td>Changes committed and website updated.</td>
+        <td>in progress</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 1</td>
-        <td>Done</td>
-        <td>03-30-20</td>
-        <td>03-30-20</td>
-        <td>Tutorial_1.wav saved to Box</td>
+        <td>started</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 2</td>
-        <td>Done</td>
-        <td>03-30-20</td>
-        <td>03-30-20</td>
-        <td>Do not have access to a microphone, but read and understand the material for now.</td>
+        <td>started</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 3</td>
-        <td>In Progress</td>
-        <td>04-01-20</td>
         <td></td>
-        <td>Read, but have not uploaded to Box yet</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 4</td>
-        <td>In Progress</td>
-        <td>04-01-20</td>
         <td></td>
-        <td>Read, but have not uploaded to Box yet</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>"A Web for Everyone"</td>
-        <td>Unstarted</td>
         <td></td>
         <td></td>
-        <td>Suggested: April 6</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Quiz 5</td>
-        <td>Unstarted</td>
+        <td></td>
         <td></td>
         <td></td>
         <td>Suggested: April 6</td>
       </tr>
       <tr>
         <td>Pecha Kucha</td>
-        <td>Done</td>
-        <td>02-03-20</td>
-        <td>02-23-20</td>
-        <td>Link in Boxnote, presented in class.</td>
+        <td>started</td>
+        <td></td>
+        <td></td>
+       <td></td>
       </tr>
       <tr>
         <td>Pecha Kucha on Github Site</td>
-        <td>Done</td>
-        <td>02-24-20</td>
-        <td>03-23-20</td>
-        <td>Slides embedded, explanation considered part of WiP2 asssignment.</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Soundscape Parts 1 and 2</td>
-        <td>Unstarted</td>
         <td></td>
         <td></td>
-        <td>Suggested: April 15</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Peer Review</td>
-        <td>Unstarted</td>
+        <td></td>
         <td></td>
         <td></td>
         <td>Due: April 20</td>
       </tr>
       <tr>
         <td>Final Website and Portfolio Submission</td>
-        <td>Unstarted</td>
+        <td></td>
         <td></td>
         <td></td>
         <td>Due: April 30</td>
