--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -30,66 +30,66 @@
       </tr>
       <tr>
         <td>Work-In-Progress 2</td>
-        <td>Done</td>
-        <td>03-04-20</td>
-        <td>03-27-20</td>
-        <td>Changes committed and website updated.</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 1</td>
-        <td>Done</td>
-        <td>03-30-20</td>
-        <td>03-30-20</td>
-        <td>Tutorial_1.wav saved to Box</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 2</td>
-        <td>Done</td>
-        <td>03-30-20</td>
-        <td>03-30-20</td>
-        <td>Do not have access to a microphone, but read and understand the material for now.</td>
+        <td>started</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 3</td>
-        <td>Done</td>
-        <td>04-01-20</td>
-        <td>04-01-20</td>
-        <td>Done, not uploaded to Box</td>
+        <td>In progress</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 4</td>
-        <td>Done</td>
-        <td>04-01-20</td>
-        <td>04-01-20</td>
-        <td>Done, not uploaded to Box</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>"A Web for Everyone"</td>
-        <td>Done</td>
-        <td>04-06-20</td>
-        <td>04-06-20</td>
-        <td>Read</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Quiz 5</td>
-        <td>Done</td>
-        <td>04-06-20</td>
-        <td>04-06-20</td>
-        <td>Written and submitted to Box</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Pecha Kucha</td>
-        <td>Done</td>
-        <td>02-03-20</td>
-        <td>02-23-20</td>
-        <td>Link in Boxnote, presented in class.</td>
+        <td>started</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Pecha Kucha on Github Site</td>
-        <td>Done</td>
-        <td>02-24-20</td>
-        <td>03-23-20</td>
-        <td>Slides embedded, explanation considered part of WiP2 asssignment.</td>
+        <td>started</td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Soundscape Parts 1 and 2</td>
