--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Cailin's Github Pages Site</titl
+	<title>Cailin's Github Pages Site</title>
   </head>
 <body>
   <h1>Cailin's Github Pages Site</h1>
