--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title>Cailin's Github Pages Site</title>
+	  <link rel="stylesheet" type="text/css" href="/static/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
   </head>
 <body>
   <h1>Cailin's Github Pages Site</h1>
