--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -32,17 +32,17 @@
       </tr>
       <tr>
         <td>Work-In-Progress 2</td>
+        <td>in progress</td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
+        <td>waiting to write all blurbs before attaching anything to site</td>
       </tr>
       <tr>
         <td>Audacity Tutorial 1</td>
+        <td>complete</td>
         <td></td>
         <td></td>
-        <td></td>
-        <td></td>
+        <td>have yet to turn in to Box</td>
       </tr>
       <tr>
         <td>Audacity Tutorial 2</td>
@@ -53,7 +53,7 @@
       </tr>
       <tr>
         <td>Audacity Tutorial 3</td>
-        <td>In progress</td>
+        <td>started</td>
         <td></td>
         <td></td>
         <td></td>
