--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <li><a href="work-1/">Work-in-Progress 1</a></li>
     <li><a href="work-2/">Work-in-Progress 2</a></li>
     <li><a href="presentation/">Work-in-Progress Presentation</a></li>
-    <li><a href="work-2/">Progress checklist</a></li> 
+    <li><a href="progress checklist/">Progress checklist</a></li> 
     <li><a href="portfolio/">Final Portfolio</a></li>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
 </ul></nav>
