--- a/work-1/index.html
+++ b/work-1/index.html
@@ -17,6 +17,9 @@
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul>
      <ul class="sub-menu">
+<li><a href="sample-1/">Classwork Sample 1</a></li>
+    <li><a href="sample-2/">Classwork Sample 2</a></li>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul>
   </nav>
   <main>
