--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -1,2 +1,31 @@
 
  
+
+<html>
+<head>
+  <title>Cailin Brashear's Github Pages Site</title>
+  <link rel="stylesheet" type="text/css" href="/static/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
+  </head>
+<body>
+  <h1>Cailin Brashear's Github Pages Site</h1>
+  <nav><ul class="main-menu">
+    <li><a href="../../">Home</a></li>
+    <li><a href="../../work-1/">Work-in-Progress 1</a></li>
+    <li><a href="../../work-2/">Work-in-Progress 2</a></li>
+    <li><a href="../../presentation/">Work-in-Progress Presentation</a></li>
+    <li><a href="../../progress checklist/">Progress checklist</a></li> 
+    <li><a href="../../portfolio/">Final Portfolio</a></li>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    </ul>
+    <ul class="main-menu">
+     <li><a href="../../work-2/sample-1/">Classwork Sample 1</a></li>
+    <li>Classwork Sample 2</li>
+       <li><a href="../../work-2/sample-3/">Classwork Sample 3</a></li>
+      <li><a href="../../work-2/sample-4/">Classwork Sample 4</a></li>
+
+      
+
+
+
+    </ul>
