--- a/work-1/index.html
+++ b/work-1/index.html
@@ -17,16 +17,15 @@
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul>
      <ul class="sub-menu">
-<li><a href="sample-1/">Classwork Sample 1</a></li>
-    <li><a href="sample-2/">Classwork Sample 2</a></li>
-    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul>
   </nav>
   <main>
     <h2>Work in Progress 1</h2>
+	  <nav><ul class="main-menu">
     <li><a href="sample-1/">Classwork Sample 1</a></li>
     <li><a href="sample-2/">Classwork Sample 2</a></li>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+		  </ul>
     <p>I have had my fair share of struggles while conducting these projects to say the least. Upon entering this class, I had zero experience with HTML or CSS, and, as someone who finds herself struggling to create simple WordPress pages, I was nervous. Now, with many hours of constantly refreshing and scanning my screen to see why on earth a change happened that I did not anticipate to, I can say that I am beginning to learn a lot about HTML and CSS as a whole. The satisfaction of typing in small words, phrases, and numbers and having it change before your eyes into real visual effects is comparable to fixing the headlight on your car – real work that elicits a visible effect. I do have to say, the feelings of accomplishment that follow doing something right is well worth the struggle. This is a skill that I never expected to have, and, even with the small amount of knowledge I have learned thus far, I feel as if I am developing hard skills that will benefit me in the future. And that’s the reason I took this class in the first place. </p>
  <p2> Most of my original works needed a good deal of up-keep to add to my website. First, I updated my about me – adding subjects and a voice that I would want to exemplify me better to my audience as well as thoroughly expanding what I wanted my website to portray. I still feel as if this section will need some work, but I feel as if I need to start adding real content before finalizing this section. 
 	I completely revised my embedded fiction assignment. I first began with a yelp review, and then changed it to an AirBnb review with basically the same premise, but that I feel relates better to the topic of imbedded fiction and is more relevant in my own life. 
