--- a/work-2/index.html
+++ b/work-2/index.html
@@ -23,13 +23,13 @@
   <main>
 
     <h2>Work in Progress 2</h2>
-
+ <nav><ul class="main-menu">
     <li><a href="sample-1/">Classwork Sample 1</a></li>
-
     <li><a href="sample-2/">Classwork Sample 2</a></li>
     <li><a href="sample-3/">Classwork Sample 3</a></li>
     <li><a href="sample-4/">Classwork Sample 4</a></li>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+     </ul></nav>
     <p></p>
   </main>
   <footer></footer>
