--- a/work-2/sample-1/index.html
+++ b/work-2/sample-1/index.html
@@ -19,6 +19,7 @@
     </ul>
     
 
+    <h2>Work in Progress 2</h2>
     <ul class="main-menu">
     <li>Classwork Sample 1</li>
     <li><a href="../../work-2/sample-2/">Classwork Sample 2</a></li>
