--- a/work-2/sample-3/index.html
+++ b/work-2/sample-3/index.html
@@ -17,6 +17,8 @@
     <li><a href="../../portfolio/">Final Portfolio</a></li>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul>
+    
+    <h2>Work in Progress 2</h2>
     <ul class="main-menu">
      <li><a href="../../work-2/sample-1/">Classwork Sample 1</a></li>
       <li><a href="../../work-2/sample-2/">Classwork Sample 2</a></li>
