--- a/work-2/sample-1/index.html
+++ b/work-2/sample-1/index.html
@@ -25,6 +25,8 @@
     <li><a href="../../work-2/sample-2/">Classwork Sample 2</a></li>
       <li><a href="../../work-2/sample-3/">Classwork Sample 3</a></li>
       <li><a href="../../work-2/sample-4/">Classwork Sample 4</a></li>
+      <main> 
+        <h3>Expectations</h3>
       
 
     </ul>
