--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -25,8 +25,9 @@
     <li>Classwork Sample 2</li>
        <li><a href="../../work-2/sample-3/">Classwork Sample 3</a></li>
       <li><a href="../../work-2/sample-4/">Classwork Sample 4</a></li>
+<main> 
+ <h3>Genre Remix</h3> 
 
-      
 
 
 
