--- a/work-2/sample-3/index.html
+++ b/work-2/sample-3/index.html
@@ -24,6 +24,8 @@
       <li><a href="../../work-2/sample-2/">Classwork Sample 2</a></li>
       <li>Classwork Sample 3</li>
       <li><a href="../../work-2/sample-4/">Classwork Sample 4</a></li>
+      <main> 
+        <h3>Storyboard</h3> 
 
 
 
