--- a/work-2/sample-4/index.html
+++ b/work-2/sample-4/index.html
@@ -25,6 +25,8 @@
       <li><a href="../../work-2/sample-2/">Classwork Sample 2</a></li>
       <li><a href="../../work-2/sample-3/">Classwork Sample 3</a></li>
       <li>Classwork Sample 4</li>
+      <main> 
+        <h3>Logo</h3> 
       
 
 
