--- a/work-2/sample-1/index.html
+++ b/work-2/sample-1/index.html
@@ -27,6 +27,6 @@
       <li><a href="../../work-2/sample-4/">Classwork Sample 4</a></li>
       <main> 
         <h3>Expectations</h3>
-      <img src=/static/images>
+      <img src=/static/sample 1.png>
 
     </ul>
