--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
 </ul></nav>
       <main>
-        <img sr="../../static/images/me.png" id="me-img'>
+        <img sr="static/images/me.png" id="me-img'>
         <h2>Cheers!<link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet"></h2>
         <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Lacquer&display=swap" rel="stylesheet">
        
