--- a/work-2/sample-2/index.html
+++ b/work-2/sample-2/index.html
@@ -27,6 +27,7 @@
       <li><a href="../../work-2/sample-4/">Classwork Sample 4</a></li>
 <main> 
  <h3>Genre Remix</h3> 
+ <img src="../../static/images/genre.png" id"genre-img">
 
 
 
