--- a/work-2/sample-4/index.html
+++ b/work-2/sample-4/index.html
@@ -27,6 +27,7 @@
       <li>Classwork Sample 4</li>
       <main> 
         <h3>Logo</h3> 
+        <img src="../../static/images/logo.png" id="logo-img"
       
 
 
