--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -102,10 +102,10 @@
       </tr>
       <tr>
         <td>Peer Review</td>
-        <td>Unstarted</td>
-        <td></td>
-        <td></td>
-        <td>Due: April 20</td>
+        <td>Finished</td>
+        <td>April 20th</td>
+        <td>April 20th</td>
+        <td>Sent to Robert and CC'd to Matt</td>
       </tr>
       <tr>
         <td>Final Website and Portfolio Submission</td>
