--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -35,25 +35,25 @@
         <td>in progress</td>
         <td></td>
         <td></td>
-        <td>waiting to write all blurbs before attaching anything to site</td>
+        <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 1</td>
-        <td>complete</td>
         <td></td>
         <td></td>
-        <td>have yet to turn in to Box</td>
+        <td></td>
+        <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 2</td>
-        <td>started</td>
+        <td></td>
         <td></td>
         <td></td>
         <td></td>
       </tr>
       <tr>
         <td>Audacity Tutorial 3</td>
-        <td>started</td>
+        <td></td>
         <td></td>
         <td></td>
         <td></td>
@@ -67,15 +67,15 @@
       </tr>
       <tr>
         <td>"A Web for Everyone"</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>completed</td>
+        <td>April 22nd</td>
+        <td>April 22nd</td>
+        <td>I really enjoyed!</td>
       </tr>
       <tr>
         <td>Quiz 5</td>
-        <td></td>
-        <td></td>
+        <td>Started</td>
+        <td>April 22nd</td>
         <td></td>
         <td></td>
       </tr>
@@ -102,7 +102,7 @@
       </tr>
       <tr>
         <td>Peer Review</td>
-        <td>Finished</td>
+        <td>completed</td>
         <td>April 20th</td>
         <td>April 20th</td>
         <td>Sent to Robert and CC'd to Matt</td>
