--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -98,7 +98,7 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Suggested: April 15</td>
+        <td></td>
       </tr>
       <tr>
         <td>Peer Review</td>
@@ -112,6 +112,6 @@
         <td></td>
         <td></td>
         <td></td>
-        <td>Due: April 30</td>
+        <td>Due: April 24th</td>
       </tr>
     </table>
