--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -74,10 +74,10 @@
       </tr>
       <tr>
         <td>Quiz 5</td>
-        <td>Started</td>
+        <td>completed/td>
         <td>April 22nd</td>
-        <td></td>
-        <td></td>
+        <td>April 22nd</td>
+        <td>uploaded to box</td>
       </tr>
       <tr>
         <td>Pecha Kucha</td>
