--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -39,10 +39,10 @@
       </tr>
       <tr>
         <td>Audacity Tutorial 1</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>Completed</td>
+        <td>April 22nd</td>
+        <td>April 22nd</td>
+        <td>Turned into box</td>
       </tr>
       <tr>
         <td>Audacity Tutorial 2</td>
