--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td>Quiz 5</td>
-        <td>completed/td>
+        <td>completed</td>
         <td>April 22nd</td>
         <td>April 22nd</td>
         <td>uploaded to box</td>
