--- a/work-2/sample-3/index.html
+++ b/work-2/sample-3/index.html
@@ -25,7 +25,8 @@
       <li>Classwork Sample 3</li>
       <li><a href="../../work-2/sample-4/">Classwork Sample 4</a></li>
       <main> 
-        <h3>Storyboard</h3> 
+        <h3>Storyboard</h3>
+        <img src="/static/images/photoshop storyboard.png" id="storyboard-img">
 
 
 
