--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,9 +9,9 @@
       <h1>Cailin's Github Pages Site</h1>
       <nav><ul class="main-menu">
   <li><a href="../">Home</a></li>
-  <li><a href="../work-1/">Work-in-Progress 1</a></li>
-  <li><a href="../work-2/">Work-in-Progress 2</a></li>
-  <li><a href="../presentation/">Work-in-Progress Presentation</a></li>
+  <li><a href="../work-1/">Work in Progress 1</a></li>
+  <li><a href="../work-2/">Work in Progress 2</a></li>
+  <li><a href="../presentation/">Presentation</a></li>
         <li><a href="../progress checklist/">Progress checklist</a></li> 
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
   <li>Final Portfolio</li>
