--- a/presentation/index.html
+++ b/presentation/index.html
@@ -9,15 +9,15 @@
   <h1>Cailin's Github Pages Site</h1>
   <nav><ul class="main-menu">
     <li><a href="../">Home</a></li>
-    <li><a href="../work-1/">Work-in-Progress 1</a></li>
-    <li><a href="../work-2/">Work-in-Progress 2</a></li>
-    <li>Work-in-Progress Presentation</li>
+    <li><a href="../work-1/">Work in Progress 1</a></li>
+    <li><a href="../work-2/">Work in Progress 2</a></li>
+    <li>Presentation</li>
     <li><a href="../progress checklist/">Progress checklist</a></li> 
     <li><a href="../portfolio/">Final Portfolio</a></li>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light&display=swap" rel="stylesheet">
     </ul></nav>
   <main>
-    <h2>My Work in Progress Presentation</h2>
+    <h2>My Presentation</h2>
     <p></p>
   </main>
   <footer></footer>
