--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -32,9 +32,9 @@
       </tr>
       <tr>
         <td>Work-In-Progress 2</td>
-        <td>in progress</td>
-        <td></td>
-        <td></td>
+        <td>completed</td>
+        <td>March 17th</td>
+        <td>April 22nd</td>
         <td></td>
       </tr>
       <tr>
