--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -35,7 +35,7 @@
         <td>completed</td>
         <td>March 17th</td>
         <td>April 22nd</td>
-        <td></td>
+        <td>committed and uploaded to box</td>
       </tr>
       <tr>
         <td>Audacity Tutorial 1</td>
