--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -60,10 +60,10 @@
       </tr>
       <tr>
         <td>Audacity Tutorial 4</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>completed</td>
+        <td>April 22nd</td>
+        <td>April 22nd</td>
+        <td>turned into box</td>
       </tr>
       <tr>
         <td>"A Web for Everyone"</td>
