--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -81,8 +81,8 @@
       </tr>
       <tr>
         <td>Pecha Kucha</td>
-        <td></td>
-        <td></td>
+        <td>in progress</td>
+        <td>April 22nd</td>
         <td></td>
         <td></td>
       </tr>
