--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -81,10 +81,10 @@
       </tr>
       <tr>
         <td>Pecha Kucha</td>
-        <td>in progress</td>
+        <td>completed</td>
         <td>April 22nd</td>
-        <td></td>
-        <td></td>
+        <td>April 22nd</td>
+        <td>have yet to upload</td>
       </tr>
       <tr>
         <td>Pecha Kucha on Github Site</td>
