--- a/presentation/index.html
+++ b/presentation/index.html
@@ -18,6 +18,7 @@
     </ul></nav>
   <main>
     <h2>My Presentation</h2>
+    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRr7R1tKomFw8ZkoERy6b8jSf7zFBs9e-7Dq31yju1O7AOLGnQYn26VcLRPWfSTtUPetGstDanuBOzT/embed?start=false&loop=false&delayms=15000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     <p></p>
   </main>
   <footer></footer>
