--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -84,14 +84,14 @@
         <td>completed</td>
         <td>April 22nd</td>
         <td>April 22nd</td>
-        <td>have yet to upload</td>
+        <td>uploaded to box</td>
       </tr>
       <tr>
         <td>Pecha Kucha on Github Site</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>Completed</td>
+        <td>April 22nd</td>
+        <td>April 24th</td>
+        <td>embedded on site</td>
       </tr>
       <tr>
         <td>Soundscape Parts 1 and 2</td>
