--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,6 +18,17 @@
 </ul></nav>
       <main>
         <h2>My Portfolio</h2>
+        <h3>Soundscapes 1 and 2</h3>
+        <p></p>
+        <h3>An example of a choice related to genre or audience</h3>
+        <p></p>
+        <h3>An example of a choice I made related to color,fonts, captions or scale</h3>
+        <p></p>
+        <h3>An example of a choice I made related to comparison</h3>
+        <p></p>
+        <h3>An example of something that frustrated me</h3>
+        <p></p>
+        <h3>An example of something that I'm particularly proud of</h3>
         <p></p>
       </main>
       <footer>
