--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,6 +29,7 @@
         <h3>An example of something that frustrated me</h3>
         <p></p>
         <h3>An example of something that I'm particularly proud of</h3>
+        <img src="../../static/images/sample 1 .png" id="parody-img">
         <p></p>
       </main>
       <footer>
