--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,7 +29,7 @@
         <h3>An example of something that frustrated me</h3>
         <p></p>
         <h3>An example of something that I'm particularly proud of</h3>
-        <img src="../../static/images/sample 1 .png" id="parody-img">
+        <img src="../../static/images/Ad.jpg" id="Ad-img"><img src="../../static/images/sample 1 .png" id="Ad2-img">
         <p></p>
       </main>
       <footer>
