--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,7 +30,7 @@
         <p></p>
         <h3>An example of something that I'm particularly proud of</h3>
         <img src="../../static/images/Ad.jpg" id="Ad-img"><img src="../../static/images/sample 1 .png" id="Ad2-img">
-        <p></p>
+        <p>For my first photoshop project, I was particularly proud of how this came out. While it may still be a little rough around the edges, I was very pleased with the way the wording came out and the fact that, at first glance, the image headings look almost indiscernible from each other. I believe I really accomplished the satirical parody of this vintage piece that I was going for when analyzing it under a feminist lens. Overall, I am very proud of the revisions I made to this piece and hope to continue working with photoshop to better my skills on altering words and phrases.</p>
       </main>
       <footer>
         
