--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@
         <p></p>
         <h3>An example of a choice I made related to color, fonts, captions or scale</h3>
         <img src="../../static/images/originallogo (2).png" id="Ad-img"> <img src="../../static/images/logo (2).png" id="Ad-img">
-        <p></p>
+        <p>My logo activity ended up being a design that I revised the most – going in a completely different direction based off a different design and content choice. Originally, I planned on making a logo for a restaurant that I could see myself having in the future. My first design lacked a lot of what I wanted the restaurant to contain. While I originally wanted a grungy vibe, I decided to go a more laid-back route that would better express the real values of the restaurant as a whole. I want the restaurant to be sustainable and focus on “green eatings”. I felt that the cool colors of light green and blue really emphasized this aspect of the restaurant, while the simplistic plant on a plate design mirrored the element of sustainability. While I realize that the name of the restaurant could be confusing to some, I designed it with a strategic font and color coordination that would mimic both words “green” and “eatings” to make a new spelling of the work “greetings” and also contain the word “great”. Under different circumstances, I would probably resort back to my first image if I decided that my restaurant would be better suited as a grungy, rock-centric establishment in order to better suit the vibe.</p>
         <h3>An example of a choice I made related to comparison</h3>
         <p></p>
         <h3>An example of something that frustrated me</h3>
