--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,7 @@
       <main>
         <h2>My Portfolio</h2>
         <h3>Soundscapes 1 and 2</h3>
-        <source src="../static/images/Soundscape.wav" type="audio/wav">
+        <source src="../../static/images/Soundscape.wav" type="audio/wav">
         <p>A rain begins, followed by a storm. A variety of birds are attempting to take shelter as the listener makes his/her way inside. She/he opens a creaky cabin door, shuts it, and maker his/her way over to the fireplace. She/her then lights a match and begins to make a fire. Soon she/her finds that a small bee has taken shelter inside. The clip ends with the listener swatting the buzzing bee as if It were the end of the song Grantchester Meadows by Pink Floyd. When I thought of soundscape, a lot of introductions to instrumental songs, like this one, were brought to my mind. I have always loved how musicians can recreate locations and actions purely through sound in order to evoke an emotional reaction. I took this into consideration and allowed these songs to inspire me when creating my soundscape.</p>
         <h3>An example of a choice related to genre or audience</h3>
         <img src="../../static/images/genrebefore.jpg" id"genre2-img">  <img src="../../static/images/genre.png" id"genre3-img">
