--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -95,10 +95,10 @@
       </tr>
       <tr>
         <td>Soundscape Parts 1 and 2</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>Completed</td>
+        <td>April 22nd</td>
+        <td>April 24th</td>
+        <td>need to upload to box</td>
       </tr>
       <tr>
         <td>Peer Review</td>
