--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -98,7 +98,7 @@
         <td>Completed</td>
         <td>April 22nd</td>
         <td>April 24th</td>
-        <td>need to upload to box</td>
+        <td>need to create citations</td>
       </tr>
       <tr>
         <td>Peer Review</td>
@@ -109,8 +109,8 @@
       </tr>
       <tr>
         <td>Final Website and Portfolio Submission</td>
-        <td></td>
-        <td></td>
+        <td>In Progress</td>
+        <td>April 20th</td>
         <td></td>
         <td>Due: April 24th</td>
       </tr>
