--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,6 +18,8 @@
 </ul></nav>
       <main>
         <h2>My Portfolio</h2>
+        <h3>Reflection</h3> 
+        <p></p>
         <h3>Soundscapes 1 and 2</h3>
         <audio controls>
           <source src="../../static/images/Soundscape.wav" type="audio/wav">
