--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -46,10 +46,10 @@
       </tr>
       <tr>
         <td>Audacity Tutorial 2</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>Completed</td>
+        <td>April 22nd</td>
+        <td>April 24th</td>
+        <td>Submitted to Box</td>
       </tr>
       <tr>
         <td>Audacity Tutorial 3</td>
