--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -53,10 +53,10 @@
       </tr>
       <tr>
         <td>Audacity Tutorial 3</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>Completed</td>
+        <td>April 24th</td>
+        <td>April 24th</td>
+        <td>Turned into Box</td>
       </tr>
       <tr>
         <td>Audacity Tutorial 4</td>
