--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,6 +40,9 @@ I have always considered my love for the arts to be embedded into who I am and w
 More recently, I have become enamored with outdoor activities like gardening and hiking as I try to become more acquainted with the world around me. This has translated directly into my traveling experiences which I value as some of the more empowering moments of my life. As my Political Science minor infers, I like to keep up to date with the current political climate and find it important to develop fact-based opinions on societal and political issues. </p>
         <p></p>
         <h3>An example of something that frustrated me</h3>
+         <audio controls>
+          <source src="../../static/images/Audacity 3 original.wav" type="audio/wav">
+        </audio>
         <p></p>
         <h3>An example of something that I'm particularly proud of</h3>
         <img src="../../static/images/Ad.jpg" id="Ad-img">  <img src="../../static/images/sample 1 .png" id="Ad2-img">
