--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -41,8 +41,11 @@ More recently, I have become enamored with outdoor activities like gardening and
         <p></p>
         <h3>An example of something that frustrated me</h3>
          <audio controls>
-          <source src="../../static/images/Audacity 3 original.wav" type="audio/wav">
+          <source src="../../static/images/audacity 3 revised.wav" type="audio/wav">
         </audio>
+       <audio controls>
+          <source src="../../static/images/DonnieSands-ThisSongIsMeantForYouInCaseImNotacoustic.mp3 type="audio/mp3">
+        </audio> 
         <p></p>
         <h3>An example of something that I'm particularly proud of</h3>
         <img src="../../static/images/Ad.jpg" id="Ad-img">  <img src="../../static/images/sample 1 .png" id="Ad2-img">
