--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,6 +19,7 @@
       <main>
         <h2>My Portfolio</h2>
         <h3>Reflection</h3> 
+        <p>I define revision as a second chance. I see it as just another step in the larger project, an imperative detail of the bigger picture. Books are not written, they are rewritten, and then rewritten a few more times after that. As a writing major, I have done a lot of revising in my days, but I had little to no experience in revising digital media until enrolling in this course. I now understand revising on a much different level – not only revising my words and my thoughts, but completely revisioning ideas so that they can become completely new entities. Whether it be in passages, websites, images, or audio clips, I have learned that even the smallest revisions can make a huge difference towards your overall goal, values, expectations, contexts, and audiences. </p>
         <p></p>
         <h3>Soundscapes 1 and 2</h3>
         <audio controls>
