--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,6 +20,7 @@
         <h2>My Portfolio</h2>
         <h3>Reflection</h3> 
         <p>I define revision as a second chance. I see it as just another step in the larger project, an imperative detail of the bigger picture. Books are not written, they are rewritten, and then rewritten a few more times after that. As a writing major, I have done a lot of revising in my days, but I had little to no experience in revising digital media until enrolling in this course. I now understand revising on a much different level – not only revising my words and my thoughts, but completely revisioning ideas so that they can become completely new entities. Whether it be in passages, websites, images, or audio clips, I have learned that even the smallest revisions can make a huge difference towards your overall goal, values, expectations, contexts, and audiences. </p>
+        <p>Before I entered this class, I had absolutely no experience using HTML or CSS. The most experience I had with digital media and web design was crafting a few Wordpress sites or messing around with photoshop when I got the chance. Honestly, I would have called myself the exact opposite of tech-savvy. Now, while I know that some areas still need to be drastically improved, I feel much more comfortable navigating myself through these medias as well as have a better understanding to what different uses mean in different contexts and to different audiences. </p>
         <p></p>
         <h3>Soundscapes 1 and 2</h3>
         <audio controls>
