--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -98,7 +98,7 @@
         <td>Completed</td>
         <td>April 22nd</td>
         <td>April 24th</td>
-        <td>need to create citations</td>
+        <td>uploaded to box and on site</td>
       </tr>
       <tr>
         <td>Peer Review</td>
@@ -111,7 +111,7 @@
         <td>Final Website and Portfolio Submission</td>
         <td>In Progress</td>
         <td>April 20th</td>
-        <td></td>
-        <td>Due: April 24th</td>
+        <td>April 27th</td>
+        <td>Extension</td>
       </tr>
     </table>
