--- a/progress checklist/index.html
+++ b/progress checklist/index.html
@@ -112,6 +112,6 @@
         <td>In Progress</td>
         <td>April 20th</td>
         <td>April 27th</td>
-        <td>Extension</td>
+        <td>Extension:committed and uploaded to box April 27th</td>
       </tr>
     </table>
